@startuml
allowmixing
skinparam classFontName Courier
skinparam classFontSize 12
'skinparam linetype ortho

top to bottom direction

package Physics {

    class Constraint {
        +enum ConstraintDirection { UP, RIGHT, DOWN, LEFT, RADIAL }

        +Constraint()
        +Constraint(float distance, ConstraintDirection direction = UP)

        +ConstraintDirection direction
        +float distance

        +void ApplyConstraint(SceneObject* obj) const
    }

    Scene "1" *-- "0..5" Constraint : owns

    struct ContactPoint {
        +ColliderBase* collider;
        +ColliderBase* otherCollider;
        +vec2 point;
        +vec2 normal;
        +float penetrationDepth;
    }

    SceneObject "1" *-- "many" ContactPoint : has

    class PhysicsSolver {
        +PhysicsSolver()

        +void SetActivePropagator(const string &name)
        +IPropagator* GetActivePropagator() const

        +void SetTimeStep(float timeStep)
        +float GetTimeStep() const

        +void UpdatePhysics(Scene* scene, float deltaTime)
        +void StepPropagation(Scene* scene)
        +void DrawContactPoints()
        -vec2 GetAccelerationForObject(const SceneObject* object) const

        -Scene* currentScene_
        -unique_ptr<IPropagator> activePropagator_
        -float timeStep_
    }

    EngineLayer *-- PhysicsSolver : owns
    PhysicsSolver --> Constraint : applies
    PhysicsSolver --> ContactPoint : finds
}
EngineLayer -[hidden]-> Physics

@enduml